--- a/estilos.css
+++ b/estilos.css
@@ -190,7 +190,6 @@ main{
     
     width: 70%;
     position: absolute;
-    background-color: green;
     left: 0;
 }
 
@@ -201,6 +200,7 @@ main{
     font-family: Arial, Helvetica, sans-serif;
     border-left: 4px solid red;
     padding-left: 20px;
+    margin:10px 10px 10px 0;
 }
 
 .programa > div > h3{
@@ -213,18 +213,147 @@ main{
 
 div.slider{
     width: 100%;
+    position: relative;;
 }
 .conte-imagen{
 
     width: 100%;
     height: 350px;
+    position: relative;
 
 }
 
 .conte-imagen > img{
-
+    position: absolute;
     width: 100%;
     height: 100%;
     object-fit: cover;
     padding: auto;
+}
+
+.indexima > div {
+    position: absolute;
+    display: inline-block;
+    top: 50px;
+    left: 50px;
+    z-index: 1;
+    transition: width 2s;
+
+}
+
+
+.indexima > div h2{
+
+    font-family: "Oswald", sans-serif;
+    font-weight: bold;
+    font-size: 35px;
+    color: white;
+
+}
+
+.indexima > div a{
+    display: inline-block;
+    position: relative;
+    width: 150px;
+    height: 50px;
+    background-color: #f89e13;
+    color:white;
+    text-decoration: none;
+    font-family: "Oswald", sans-serif;
+    text-align: center;
+    font-weight: bold;
+    padding: 15px 0;
+    box-sizing: border-box;
+    border-radius: 3px 0 0 3px;
+}
+
+.indexima > div a::after{
+    content: ">";
+    background-color: #f89e13;
+    position: absolute;
+    right: -26px;
+    width: 15px;
+    top: 10px;
+    box-shadow: 0px -5px 0px 5px  #f89e13;
+    padding-bottom: 18px;
+    padding-top: 5px;
+    box-sizing: border-box;
+    border-radius: 0 2px 2px 0;
+
+}
+
+.btn-atras{
+    background-color:#2994cd;
+    width: 40px;
+    height: 40px;
+    border: 5px solid #5fa8cc;
+  transform: rotate(45deg);
+  position: absolute;
+  top: 50%;
+  
+}
+.btn-atras i{
+
+    transform: rotate(-45deg); 
+    color: white;
+    font-size: 20px;
+}
+.btn-adelante{
+
+    background-color:#2994cd;
+    width: 40px;
+    height: 40px;
+    border: 5px solid #5fa8cc;
+    transform: rotate(45deg);
+    position: absolute;
+    right: 0;
+    top: 50%;
+
+}
+
+.btn-adelante i{
+
+    transform: rotate(130deg); 
+    color: white;
+    font-size: 20px;
+}
+.ovas-main{
+
+    display: flex;
+    justify-content:space-between;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 400px;
+}
+.ovas-content{
+    display: inline-block;
+    position: relative;
+    width: 23%;
+    height: 200px;
+}
+.ovas-content img{
+
+    position: absolute;
+    width: 100%;
+    height: 80%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.ovas-content h6{
+
+    font-family: Arial, Helvetica, sans-serif;
+    position: absolute;
+    height: 20%;
+    bottom: 0;
+
+}
+
+.negro{
+
+    background-color: #30323f;
+}
+
+.cabe{
+    background-color: #1f212b;
 }
